# libp2pchat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  fly.toml
src/: db.rs  identity.rs  main.rs
src/identity/: keypair.rs  mod.rs  peer_id.rs
src/p2p/: behaviour.rs  discovery.rs  events.rs  mod.rs  relay.rs  swarm.rs  transport.rs
src/protocol/: codec.rs  discovery.rs  message.rs  mod.rs  rpc.rs
src/services/: chat.rs  discovery.rs  files.rs  mod.rs  peers.rs  rpc.rs
src/storage/: mod.rs  peers.rs  settings.rs  sqlite.rs
src/vpn/: ffi.rs  mod.rs  routes.rs  tunnel.rs
