[package]
name = "libp2p-chat"
version = "0.1.0"
edition = "2024"


[dependencies]
libp2p = { version = "0.54", features = ["gossipsub", "mdns", "tcp", "macros", "tokio", "noise", "yamux", "quic", "dcutr", "identify", "kad"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
libc = "0.2"


# New dependencies for persistence
rusqlite = { version = "0.31", features = ["bundled"] } # "bundled" compiles SQLite statically
directories = "5.0"