[package]
name = "libp2p-chat"
version = "0.1.0"
edition = "2024"


[dependencies]
libp2p = { version = "0.54", features = ["gossipsub", "mdns", "tcp", "macros", "tokio", "noise", "yamux", "quic", "dcutr", "identify", "kad","autonat","relay"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
libc = "0.2"


# New dependencies for persistence
rusqlite = { version = "0.31", features = ["bundled"] } # "bundled" compiles SQLite statically
directories = "5.0"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[mounts]
  source = "chat_db_volume"
  destination = "/data"
[[services]]
  internal_port = 8500
  protocol = "tcp"

  [[services.ports]]
    port = 8500

[[services]]
  internal_port = 8500
  protocol = "udp"

  [[services.ports]]
    port = 8500